--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.608.0",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
@@ -23,5 +24,8 @@
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1",
     "stream": "0.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
