--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.608.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
